Added button styling.

--- a/dso.html
+++ b/dso.html
@@ -60,7 +60,7 @@
             for ‘Phase Shift Keying (PSK) Modulation’ and ‘Quadrature Amplitude Modulation (QAM)’ respectively.
             The digital data is converted to complex number data according to the constellation plot. For filtering,
             I also had to implement the Rational transfer function for the low pass filter that attenuates unwanted frequency content. Lastly, I had to implement
-            the interpolate function returns interpolated values of a 1-D function at specific query points using linear interpolation.</p>
+            the interpolate function which returns interpolated values of a 1-D function at specific query points using linear interpolation.</p>
           <p class="lead">My last task was developing the instrument drivers for communication and control of the PXI peripherals which would be used for testing and measurement.
             One of the program was for a digitizer card, to acquire and capture data from the input waveform from a waveform generator.</p>
             <p class="lead">Through this experience, I learnt to be resourceful and independent in the way I approached my challenges. Since most parts of the tasks
