--- a/experience.html
+++ b/experience.html
@@ -24,9 +24,12 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="education.html">Education
-
 						</a>
 					</li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects
+            </a>
+          </li>
 					<li class="nav-item active">
 						<a class="nav-link" href="#">Experiences
 						<span class="sr-only">(current)</span>
@@ -68,59 +71,15 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-sm">
-								<div class="card" style="width: 18rem;">
-									<img src="images/tP.png" class="card-img-top" alt="Education">
-									<div class="card-body">
-										<h5 class="card-title">treasurerPro</h5>
-										<p class="card-text">A desktop application to make work easier for treasurers.</p>
-										<a href="tP.html" class="btn btn-primary">Learn more</a>
-									</div>
-								</div>
-							</div>
-              <div class="col-sm">
-								<div class="card" style="width: 18rem;">
-									<img src="images/fldj.jpg" class="card-img-top" alt="Education">
-									<div class="card-body">
-										<h5 class="card-title">Flask/Django Web Apps</h5>
-										<p class="card-text">Web programming projects using Python and Javascript.</p>
-										<a href="pythonweb.html" class="btn btn-primary">Learn more</a>
-									</div>
-								</div>
-							</div>
-              <div class="col-sm">
-								<div class="card" style="width: 18rem;">
-									<img src="images/rn.png" class="card-img-top" alt="Education">
-									<div class="card-body">
-										<h5 class="card-title">React Native Mobile Apps</h5>
-										<p class="card-text">React Native mobile application projects.</p>
-										<a href="rn.html" class="btn btn-primary">Learn more</a>
-									</div>
-								</div>
-							</div>
               <div class="col-sm">
                 <div class="card" style="width: 18rem;">
-									<img src="images/react.jpg" class="card-img-top" alt="Education">
-									<div class="card-body">
-										<h5 class="card-title">React Web Apps</h5>
-										<p class="card-text">Web programming projects made with React.</p>
-										<a href="react.html" class="btn btn-primary">Learn more</a>
-									</div>
-								</div>
-              </div>
-              <div class="col-sm">
-                <div class="card" style="width: 18rem;">
-									<img src="images/dso.png" class="card-img-top" alt="Education">
+									<img src="images/dso.png" class="card-img-top" alt="Education" height="212">
 									<div class="card-body">
 										<h5 class="card-title">Y1 Summer Internship</h5>
 										<p class="card-text">My experience interning at DSO in Jun-Aug 2019.</p>
 										<a href="dso.html" class="btn btn-primary">Learn more</a>
 									</div>
 								</div>
-              </div>
-              <div class="col-sm">
-              </div>
-              <div class="col-sm">
               </div>
 						</div>
 					</div>
