--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 					<li class="nav-item">
 						<a class="nav-link" href="education.html">Education</a>
 					</li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects</a>
+          </li>
 					<li class="nav-item">
 						<a class="nav-link" href="experience.html">Experiences</a>
 					</li>
@@ -53,10 +56,26 @@
               <h3 class="font-weight-light" style="margin-top:50px"><span class="u--highlight">Who I am.</span></h3>
                 <p class="lead"> I am a Year 3 student from
                 the National University of Singapore.
-                I aspire to become a software engineer to be able to help solve real-world problems
+                I aspire to become a <span class="u--highlight" id="smaller-highlight">software engineer</span>
+                to be able to help <span class="u--highlight" id="smaller-highlight">solve real-world problems</span>
                 with industry-driven solutions. I love interacting with others because I am interested
                 in the different perspectives that people with different experiences
-                can bring to the conversation. I hope to be able to bring about positive changes in the future through my work.</p>
+                can bring to the conversation. I hope to be able to bring
+                about <span class="u--highlight" id="smaller-highlight">positive changes</span> in the future through my work.
+              </p>
+              <a href="./files/resume.pdf" class="btn btn-primary" style="margin-top:20px">View CV</a>
+            </section>
+            <section class="summary" style="text-align:right;">
+              <h3 class="font-weight-light" style="margin-top:50px; text-align:right"><span class="u--highlight">What I do.</span></h3>
+                <p class="lead" style="text-align:right"> I am specialising in software development with computer security. I enjoy
+                  doing <span class="u--highlight" id="smaller-highlight">software development</span>.
+                I have some experience in <span class="u--highlight" id="smaller-highlight">Java</span> desktop application development,
+                <span class="u--highlight" id="smaller-highlight">Flask and Django</span> Web programming with Javascript and Python,
+                <span class="u--highlight" id="smaller-highlight">React</span> Web programming and
+                <span class="u--highlight" id="smaller-highlight">React Native</span> mobile app development.
+                I also enjoy doing <span class="u--highlight" id="smaller-highlight">social media content designs</span> using Canva for my marketing team
+                in a student-led project, IlluminateSG.</p>
+                <a href="/projects.html" class="btn btn-primary" style="float: inherit; margin-top:20px">View Projects</a>
             </section>
             <section class="info-cards" id="intro-cards">
               <h3 class="font-weight-light" style="margin-top:50px"><span class="u--highlight">Learn more about me.</span></h3>
