--- a/pythonweb.html
+++ b/pythonweb.html
@@ -27,9 +27,12 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="education.html">Education
-
 						</a>
 					</li>
+          <li class="nav-item active">
+            <a class="nav-link" href="projects.html">Projects
+            </a>
+          </li>
 					<li class="nav-item">
 						<a class="nav-link" href="experience.html">Experiences
 						</a>
@@ -52,8 +55,8 @@
           <img style="height:600px" src="images/bookreview.png" class="d-block w-100" alt="...">
   				<!--description-->
   				<p class="lead">This is a book review web application that allows users to login and make book reviews and rate books that they have read or find information on
-          books. The app makes use of some APIs like GoogleBooks, Goodreads, Open Library to retrieve book informations. It was made using the Flask micro-framework and uses
-          PostgreSQL to store user information and data.</p>
+          books. The app makes use of some <span class="u--highlight" id="smaller-highlight">APIs like GoogleBooks, Goodreads, Open Library</span> to retrieve book informations. It was made using the Flask micro-framework and uses
+          <span class="u--highlight" id="smaller-highlight">PostgreSQL</span> to store user information and data. This is created using <span class="u--highlight" id="smaller-highlight">Flask</span>.</p>
           <h5 class="font-weight-light">Check out the repository for it here:</h5>
   				<div style="height:10px"></div>
   				<!--Social Media Icons -->
@@ -65,7 +68,8 @@
   				<!--description-->
   				<p class="lead">This is a simple chat application similar to slack. Once a user creates a username, it allows users to join any chat rooms available or to
           create a new chat room. The chatroom would update in real time when new users join and load the previous 100 messages. It also saves the state of the web app such
-          that when the browser is closed, the same page would be opened again. It is created using socketIO and using the flask
+          that when the browser is closed, the same page would be opened again. It is created using <span class="u--highlight" id="smaller-highlight">socketIO</span>
+          and using the <span class="u--highlight" id="smaller-highlight">Flask</span>
           micro-framework.</p>
           <h5 class="font-weight-light">Check out the repository for it here:</h5>
   				<div style="height:10px"></div>
@@ -77,8 +81,9 @@
           <img style="height:600px" src="images/menu.png" class="d-block w-100" alt="...">
   				<!--description-->
   				<p class="lead">This is a website that allows customers to place personalised orders on food. It has an admin page for
-          the restaurant owner to access and check orders and update orders as well. This website is made using the Django framework and
-          it stores data on users, items in the menu and orders on sqlite.</p>
+          the restaurant owner to access and check orders and update orders as well. This website is made using the <span class="u--highlight" id="smaller-highlight">Django</span>
+          framework and
+          it stores data on users, items in the menu and orders on <span class="u--highlight" id="smaller-highlight">sqlite</span>.</p>
           <h5 class="font-weight-light">Check out the repository for it here:</h5>
   				<div style="height:10px"></div>
   				<!--Social Media Icons -->
