--- a/rn.html
+++ b/rn.html
@@ -27,9 +27,12 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="education.html">Education
-
 						</a>
 					</li>
+          <li class="nav-item active">
+            <a class="nav-link" href="projects.html">Projects
+            </a>
+          </li>
 					<li class="nav-item">
 						<a class="nav-link" href="experience.html">Experiences
 						</a>
@@ -63,7 +66,7 @@
           <!--<img class="center" style="max-height:600px; max-width:300px; margin-left:auto; margin-right:auto;" src="images/.jpg" alt="...">-->
   				<!--description-->
   				<p class="lead">This is a mobile application that checks for movie information, shows popular movies and give movie recommendations. This retrieves information
-          from TMDB and OMDB API. This makes use of react-navigation for the various pages.</p>
+          from <span class="u--highlight" id="smaller-highlight">TMDB and OMDB API</span>. This makes use of <span class="u--highlight" id="smaller-highlight">react-navigation</span> for the various pages.</p>
           <h5 class="font-weight-light">Check out the repository for it here:</h5>
   				<div style="height:10px"></div>
   				<!--Social Media Icons -->
@@ -112,8 +115,9 @@
   				<!--description-->
   				<p class="lead">This is a mobile application that helps to keep track of utility usages for electricity, water and gas. Users can set daily reminders at a specific
           timing to record the utility meter readings in the app. The app helps to visualise the daily usages so users can see when there is an increase in their usage. It also
-          helps users to organise their utility bills by allowing them to take photos of their bills and inputing its month and year so the app can organise it in order. It makes use
-          of react redux to persist information and the images are stored in the local storage using Expo's localSystem API. Push notifications are also generated using Expo's API.</p>
+          helps users to organise their utility bills by allowing them to <span class="u--highlight" id="smaller-highlight">take photos of their bills</span> and inputing its month and year so the app can organise it in order. It makes use
+          of <span class="u--highlight" id="smaller-highlight">react redux</span> to persist information and the images are stored in the local storage using <span class="u--highlight" id="smaller-highlight">Expo's localSystem API</span>.
+          Push notifications are also generated using Expo's API.</p>
           <h5 class="font-weight-light">Check out the repository for it here:</h5>
   				<div style="height:10px"></div>
   				<!--Social Media Icons -->
