--- a/contactme.html
+++ b/contactme.html
@@ -27,9 +27,12 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="education.html">Education
-
 						</a>
 					</li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects
+            </a>
+          </li>
 					<li class="nav-item">
 						<a class="nav-link" href="experience.html">Experiences</a>
 					</li>
