--- a/education.html
+++ b/education.html
@@ -28,6 +28,10 @@
 						<span class="sr-only">(current)</span>
 						</a>
 					</li>
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects
+            </a>
+          </li>
 					<li class="nav-item">
 						<a class="nav-link" href="experience.html">Experiences</a>
 					</li>
