--- a/illuminatesg.html
+++ b/illuminatesg.html
@@ -27,10 +27,13 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="education.html">Education
-
 						</a>
 					</li>
-					<li class="nav-item">
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects
+            </a>
+          </li>
+					<li class="nav-item active">
 						<a class="nav-link" href="experience.html">Experiences
 						</a>
 					</li>
@@ -113,20 +116,22 @@
 
 				<div style="height:50px"></div>
 				<h3 class="writing">"Try to see things differently - It's the only way to get a clearer perspective on the world and on your life"</h3>
-				<p class="lead">IlluminateSG is a project under Social Impact Catalyst NUS which is a club that focuses on social entrepreneurship.
+				<p class="lead">IlluminateSG is a project under Social Impact Catalyst NUS which is a club that focuses on
+          <span class="u--highlight" id="smaller-highlight">social entrepreneurship</span>.
 				Our aim as IlluminateSG is to spark meaningful conversations on pressing social issues amongst youths in Singapore. Currently, we have
 				organised 2 of our flagship events called 'Common Space' where we bring together different people and guest experts to share on certain topics.
-				The topics of the 2 'Common Space' events were 'Education Inequality' and 'Mental Health'.</p>
+				The topics of the 2 'Common Space' events were <span class="u--highlight" id="smaller-highlight">'Education Inequality' and 'Mental Health'</span>.</p>
 				<p class="lead">We are still exploring how we can ensure that our events are sustainable through a revenue stream such that our project can work
 				more like a social enterprise and further our cause. We are currently under a grant by the National Youth Council under the Young Change Makers
 				program.</p>
-				<p class="lead">I am part of the Marketing team where I am the head of content creation. I overlook specifically at the content we create
+				<p class="lead">I am part of the <span class="u--highlight" id="smaller-highlight">Marketing team where I am the head of content creation
+        </span>. I overlook specifically at the content we create
 				for our social media sites,
 				our website where we share blogs and our marketing material for our events like posters and banners. I am incredibley delighted to be working with
 				amazing group mates, especially the marketing team that is filled with talented individuals. Although we have our positions, we work on a flat
-				hierarchy so that everyone is able to comfortably voice out opinions and be part of decision making. My marketing team mates include Raihana, a year 3
-				marketing student in NUS who is also our head of public relations, Samihah, a year 2 political science student in NUS who is our head writer for our blogs,
-				Wei Ming, a year 1 computer science student in NUS who is in charge of our website and graphic design as well as Darima, a year 2 arts student in NUS who is our
+				hierarchy so that everyone is able to comfortably voice out opinions and be part of decision making. My marketing team mates include Raihana, a year 4
+				marketing student in NUS who is also our head of public relations, Samihah, a year 3 political science student in NUS who is our head writer for our blogs,
+				Wei Ming, a year 2 computer science student in NUS who is in charge of our website and graphic design as well as Darima, a year 3 arts student in NUS who is our
 				lead in designing content for our social media sites.</p>
 
 				<h5 class="font-weight-light">Connect with us and checkout more of our work here:</h5>
