--- a/suzhou.html
+++ b/suzhou.html
@@ -27,10 +27,13 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="education.html">Education
-
 						</a>
 					</li>
-					<li class="nav-item">
+          <li class="nav-item">
+            <a class="nav-link" href="projects.html">Projects
+            </a>
+          </li>
+					<li class="nav-item active">
 						<a class="nav-link" href="experience.html">Experiences
 						</a>
 					</li>
@@ -107,11 +110,13 @@
 				<h3 class="writing">"Let China Sleep, for when she wakes, she will shake the world," - Napoleon Bonaparte</h3>
 				<p class="lead">During my winter break in year 2, I went on a 1 month immersion trip to Suzhou, China where
 				we learnt about the history of that area, the business environment in China and how their different businesses work. There I had
-				lessons in the NUSRI Suzhou campus with different guest professors from the local universities there. We were tasked
+				lessons in the <span class="u--highlight" id="smaller-highlight">NUSRI Suzhou campus</span> with
+        different guest professors from the local universities there. We were tasked
 				with case-study assignments which required us to study various types of businesses and present it to the class as groups. After the trip,
-        we also had to do a comprehensive 9 to 10 page final report on the topic of 'The rise of China' where we focused on any of the 3 areas of
+        we also had to do a comprehensive 9 to 10 page final report on the topic of <span class="u--highlight" id="smaller-highlight">'The rise
+          of China' where we focused on any of the 3 areas of
         China's soft power, 'A New World Order' or 'community with a shared future for mankind', a concept delivered by former
-        Chinese Communist Party general secretary Hu Jintao and advocated by current general secretary Xi Jinping.</p>
+        Chinese Communist Party general secretary Hu Jintao and advocated by current general secretary Xi Jinping.</span></p>
 				<p class="lead">We were given opportunities to go on industrial visits to places like the Huawei R&D centre, Bank of China HQ in Suzhou,
 				Dream Village in Hangzhou and other tech companies. There we were exposed to how China is developing technology to become
 				the next tech leader of the world and how they believe it can help them acheive sustainable economic growth. It was indeed
