--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <span class="u--highlight" id="smaller-highlight">React Native</span> mobile app development.
                 I also enjoy doing <span class="u--highlight" id="smaller-highlight">social media content designs</span> using Canva for my marketing team
                 in a student-led project, IlluminateSG.</p>
-                <a href="/projects.html" class="btn btn-primary" style="float: inherit; margin-top:20px">View Projects</a>
+                <a href="projects.html" class="btn btn-primary" style="float: inherit; margin-top:20px">View Projects</a>
             </section>
             <section class="info-cards" id="intro-cards">
               <h3 class="font-weight-light" style="margin-top:50px"><span class="u--highlight">Learn more about me.</span></h3>
