--- a/education.html
+++ b/education.html
@@ -3,10 +3,12 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" href="css/index.css">
 <link rel="stylesheet" href="css/education.css">
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <html>
     <head>
         <title>My Webpage</title>
@@ -47,8 +49,11 @@
 		<div class="container">
 			<div class="card border-0 shadow my-5">
 				<div class="card-body p-5">
+        <div data-aos="zoom-in">
 				<h1 class="font-weight-light" style="text-align:center"><span class="u--highlight">Summary of my education journey</span></h1>
+        </div>
 				<div style="height: 30px"></div>
+        <div data-aos="fade-up">
 				<table style="width:100%">
 					<colgroup>
 						<col span="1" style="width: 50%;">
@@ -81,6 +86,8 @@
 						<td>Bachelors of Computing in Computer Science (Honours)</td>
 					</tr>
 				</table>
+      </div>
+      <div data-aos="fade-up">
           <section class="info">
 							<h2 class="font-weight-light" style="margin-top:50px"><span class="u--highlight">More details of my experiences in each school</span></h2>
 							<h3 class="font-weight-light" style="margin-top:20px; margin-bottom:-20px;"><span class="u--highlight" id="smaller-highlight">Kong Hwa School, 2006-2011</span></h3>
@@ -117,8 +124,12 @@
               modules, it allowed to me further my self-learning in web and mobile app development during my year 2 summer through my
               own personal projects and online courses.</p>
             </section>
-					</div>
-				</div>
-		  </div>
-    </body>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+  <script>
+      AOS.init();
+  </script>
 </html>
