--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,8 @@
 <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" href="css/index.css">
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -47,7 +49,9 @@
 		<div class="container">
 			<div class="card border-0 shadow my-5">
 				<div class="card-body p-5">
+          <div data-aos="zoom-in">
 					<h1 class="font-weight-light" style="text-align:center"><span class="u--highlight">My projects</span></h1>
+        </div>
 					<div style="height: 40px;"></div>
 					<div class="container">
 						<div class="row">
@@ -100,5 +104,8 @@
 				</div>
 			</div>
 		</div>
-    </body>
+  </body>
+  <script>
+    AOS.init();
+  </script>
 </html>
