Edited minor grammer issues.

--- a/pythonweb.html
+++ b/pythonweb.html
@@ -55,8 +55,9 @@
           <img style="height:600px" src="images/bookreview.png" class="d-block w-100" alt="...">
   				<!--description-->
   				<p class="lead">This is a book review web application that allows users to login and make book reviews and rate books that they have read or find information on
-          books. The app makes use of some <span class="u--highlight" id="smaller-highlight">APIs like GoogleBooks, Goodreads, Open Library</span> to retrieve book informations. It was made using the Flask micro-framework and uses
-          <span class="u--highlight" id="smaller-highlight">PostgreSQL</span> to store user information and data. This is created using <span class="u--highlight" id="smaller-highlight">Flask</span>.</p>
+          books. The app makes use of some <span class="u--highlight" id="smaller-highlight">APIs like GoogleBooks, Goodreads, Open Library</span> to retrieve book informations.
+          It was made using the <span class="u--highlight" id="smaller-highlight">Flask</span> micro-framework and uses
+          <span class="u--highlight" id="smaller-highlight">PostgreSQL</span> to store user information and data.</p>
           <h5 class="font-weight-light">Check out the repository for it here:</h5>
   				<div style="height:10px"></div>
   				<!--Social Media Icons -->
