Added demo link.

--- a/react.html
+++ b/react.html
@@ -64,6 +64,7 @@
             obscene images which are removed from the Community Tab. To improve the performance of the loading of posts, a <span class="u--highlight" id="smaller-highlight">
               virtualised list node module</span> was used as well. Lastly,
           <span class="u--highlight" id="smaller-highlight">React Spring</span> was used to create simple animations of elements.</p>
+          <a href="./videos/fan-community-demo.mp4" class="font-weight-light" style="font-size:18px; margin-bottom:15px;">Watch Demo</a>
           <h5 class="font-weight-light" style="margin-top:10px">Check out the repository for it here:</h5>
   				<div style="height:10px"></div>
   				<!--Social Media Icons -->
