--- a/experience.html
+++ b/experience.html
@@ -56,7 +56,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-sm">
-								<div class="card" style="width: 18rem;">
+								<div class="card card__page" style="width: 18rem;">
 									<img src="images/illuminatesg.jpg" class="card-img-top" alt="Education">
 									<div class="card-body">
 										<h5 class="card-title">IlluminateSG</h5>
@@ -66,7 +66,7 @@
 								</div>
 							</div>
 							<div class="col-sm">
-								<div class="card" style="width: 18rem;">
+								<div class="card card__page" style="width: 18rem;">
 									<img src="images/nusri.jpg" class="card-img-top" alt="Education">
 									<div class="card-body">
 										<h5 class="card-title">Suzhou Winter Program</h5>
@@ -76,7 +76,7 @@
 								</div>
 							</div>
               <div class="col-sm">
-                <div class="card" style="width: 18rem;">
+                <div class="card card__page" style="width: 18rem;">
 									<img src="images/dso.png" class="card-img-top" alt="Education" height="212">
 									<div class="card-body">
 										<h5 class="card-title">Y1 Summer Internship</h5>
