--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
           </div>
           <section class="info-cards" id="intro-cards">
             <div data-aos="fade-up">
+              <div class="container">
               <h3 class="font-weight-light" style="margin-top:50px"><span class="u--highlight">Learn more about me.</span></h3>
               <div class="row">
                 <div class="col-sm">
-                  <div class="card card__page" style="width: 18rem;">
+                  <div class="card card__page">
                     <img src="images/work.png" class="card-img-top" alt="Education">
                     <div class="card-body">
                       <h5 class="card-title">Education</h5>
@@ -103,18 +104,18 @@
                   </div>
                 </div>
                 <div class="col-sm">
-                  <div class="card card__page" style="width: 18rem;">
+                  <div class="card card__page">
                     <img src="images/event.JPG" class="card-img-top" alt="Experiences">
                     <div class="card-body">
                       <h5 class="card-title">Experiences</h5>
-                      <p class="card-text">Get to know my experiences in co-cirricular activities, internships and projects.</p>
+                      <p class="card-text">Get to know my experiences in co-cirricular activities, programs and internships.</p>
                       <a href="experience.html" class="btn btn-primary">Learn more</a>
                     </div>
                   </div>
                 </div>
                 <div class="col-sm">
-                  <div class="card card__page" style="width: 18rem;">
-                    <img src="images/contactme1.png" class="card-img-top" alt="Contact">
+                  <div class="card card__page">
+                    <img src="images/contactme1.png" class="card-img-top" alt="Contact" style="height:17em">
                     <div class="card-body">
                       <h5 class="card-title">Contact me</h5>
                       <p class="card-text">Get in touch with me personally.</p>
@@ -123,6 +124,7 @@
                   </div>
                 </div>
               </div>
+            </div>
             </div>
           </section>
         </div>
