--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
 					<div class="container">
 						<div class="row">
               <div class="col-sm">
-                <div class="card" style="width: 18rem;">
+                <div class="card card__page" style="width: 18rem;">
 									<img src="images/react.jpg" class="card-img-top" alt="Education">
 									<div class="card-body">
 										<h5 class="card-title">React Web Apps</h5>
@@ -66,7 +66,7 @@
 								</div>
               </div>
               <div class="col-sm">
-								<div class="card" style="width: 18rem;">
+								<div class="card card__page" style="width: 18rem;">
 									<img src="images/fldj.jpg" class="card-img-top" alt="Education">
 									<div class="card-body">
 										<h5 class="card-title">Flask/Django Web Apps</h5>
@@ -76,7 +76,7 @@
 								</div>
 							</div>
               <div class="col-sm">
-								<div class="card" style="width: 18rem;">
+								<div class="card card__page" style="width: 18rem;">
 									<img src="images/rn.png" class="card-img-top" alt="Education">
 									<div class="card-body">
 										<h5 class="card-title">React Native Mobile Apps</h5>
@@ -86,8 +86,8 @@
 								</div>
 							</div>
               <div class="col-sm">
-								<div class="card" style="width: 18rem;">
-									<img src="images/tP.png" class="card-img-top" alt="Education">
+								<div class="card card__page" style="width: 18rem;">
+									<img src="images/tP.png" class="card-img-top" alt="Education" height="165px">
 									<div class="card-body">
 										<h5 class="card-title">treasurerPro</h5>
 										<p class="card-text">A desktop application to make work easier for treasurers.</p>
@@ -95,10 +95,6 @@
 									</div>
 								</div>
 							</div>
-              <div class="col-sm">
-              </div>
-              <div class="col-sm">
-              </div>
 						</div>
 					</div>
 				</div>
