Added responsive media query.

--- a/education.html
+++ b/education.html
@@ -66,22 +66,22 @@
 						<th>Qualifications</th>
 					</tr>
 					<tr>
-						<td> <img src="images/khs.jpg" class="sch-logo"> Kong Hwa School</td>
+						<td> <img src="images/khs_tp.png" class="sch-logo"> Kong Hwa School</td>
 						<td>Primary</td>
 						<td>PSLE score: 244</td>
 					</tr>
 					<tr>
-						<td><img src="images/cchms.png" class="sch-logo">Chung Cheng High School (Main)</td>
+						<td><img src="images/cchms_tp.png" class="sch-logo">Chung Cheng High School (Main)</td>
 						<td>Secondary</td>
 						<td>O'levels: 7 (raw), 3 (nett)</td>
 					</tr>
 					<tr>
-						<td><img src="images/vjc.jpg" class="sch-logo">Victoria Junior College</td>
+						<td><img src="images/vjc_tp.png" class="sch-logo">Victoria Junior College</td>
 						<td>Tertiary</td>
 						<td>A'levels: 90 rank points</td>
 					</tr>
 					<tr>
-						<td><img src="images/nus2.png" class="sch-logo">National University of Singapore</td>
+						<td><img src="images/nus_tp.png" class="sch-logo">National University of Singapore</td>
 						<td>Tertiary</td>
 						<td>Bachelors of Computing in Computer Science (Honours)</td>
 					</tr>
