--- a/contactme.html
+++ b/contactme.html
@@ -70,9 +70,8 @@
 				</div>
 				<div style="height:20px"></div>
 				<div class="box">
-					<i class="fa fa-envelope fa-lg" style="user-select: auto;"></i>
-					<div style="width:5px;"></div>
-					<div>: kangyee@comp.nus.edu.sg</div>
+					<i class="fa fa-envelope fa-lg" style="user-select: auto; margin-right:2px;"></i> :
+					<div style="margin-left:5px" id="email">kangyee@comp.nus.edu.sg</div>
 					<div style="width:20px"></div>
 				</div>
 				</div>
