--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div data-aos="fade-left">
             <section class="summary" style="text-align:right;">
               <h3 class="font-weight-light" style="margin-top:50px; text-align:right"><span class="u--highlight">What I do.</span></h3>
-                <p class="lead" style="text-align:right"> I am specialising in software development with computer security. I enjoy
+                <p class="lead" style="text-align:right"> I am specialising in software engineering with computer security. I enjoy
                   doing <span class="u--highlight" id="smaller-highlight">software development</span>.
                 I have some experience in <span class="u--highlight" id="smaller-highlight">Java</span> desktop application development,
                 <span class="u--highlight" id="smaller-highlight">Flask and Django</span> Web programming with Javascript and Python,
