--- a/education.html
+++ b/education.html
@@ -111,7 +111,7 @@
 							I was part of VJC's Interact Club which is under Roteract Club Singapore. We participated in many activies
 							and events that contributed back to the community through volunteerism or organising of events. I was given
 							the opportunity to be part of the organising committee for 'Community Affair' in VJC which is an annual event
-							to get the school community to give back to society. I also volunteered in many events like Walk for Rice by NTUC, a Clothes Drive, a Food drive for Foodbank Singapore, etc.
+							to get the school community to give back to society. I also volunteered in many events like Walk for Rice by NTUC, a Clothes Drive for SANA, a Food drive for Foodbank Singapore, etc.
 							I was extremely proud that I was also able to acheive academic excellence and became one of the top scorers
 							to acheive 7 A'level distinctions.</p>
 							<h3 class="font-weight-light" style="margin-top: 20px; margin-bottom:-20px;"><span class="u--highlight" id="smaller-highlight">National University of Singapore, 2018-present</span></h3>
@@ -120,7 +120,7 @@
 							I am also part of Social Impact Catalyst NUS under a project called IlluminateSG where we hope to
 							spark conversations on pressing social issues for youths through our events and campaigning. In IlluminateSG,
 							I work as the Head of Content Creation for the Marketing team. During my time in NUS, I also interned at
-							DSO during my summer in the first year to gain more experience. With the skills I picked up through my Computer Science
+							DSO during my summer in the first year to gain more working experience. With the skills I picked up through my Computer Science
               modules, it allowed to me further my self-learning in web and mobile app development during my year 2 summer through my
               own personal projects and online courses.</p>
             </section>
