--- a/illuminatesg.html
+++ b/illuminatesg.html
@@ -120,20 +120,21 @@
           <span class="u--highlight" id="smaller-highlight">social entrepreneurship</span>.
 				Our aim as IlluminateSG is to spark meaningful conversations on pressing social issues amongst youths in Singapore. Currently, we have
 				organised 2 of our flagship events called 'Common Space' where we bring together different people and guest experts to share on certain topics.
-				The topics of the 2 'Common Space' events were <span class="u--highlight" id="smaller-highlight">'Education Inequality' and 'Mental Health'</span>.</p>
+				The topics of the 2 'Common Space' events were <span class="u--highlight" id="smaller-highlight">'Education Inequality','Mental Health' and 'Migrant Workers'</span>.</p>
 				<p class="lead">We are still exploring how we can ensure that our events are sustainable through a revenue stream such that our project can work
 				more like a social enterprise and further our cause. We are currently under a grant by the National Youth Council under the Young Change Makers
 				program.</p>
 				<p class="lead">I am part of the <span class="u--highlight" id="smaller-highlight">Marketing team where I am the head of content creation
         </span>. I overlook specifically at the content we create
 				for our social media sites,
-				our website where we share blogs and our marketing material for our events like posters and banners. I am incredibley delighted to be working with
+				our website where we share blogs and our marketing material for our events like posters and banners. I also do designs for our Instagram posts and posters for events.
+        I am incredibley delighted to be working with
 				amazing group mates, especially the marketing team that is filled with talented individuals. Although we have our positions, we work on a flat
 				hierarchy so that everyone is able to comfortably voice out opinions and be part of decision making. My marketing team mates include Raihana, a year 4
-				marketing student in NUS who is also our head of public relations, Samihah, a year 3 political science student in NUS who is our head writer for our blogs,
-				Wei Ming, a year 2 computer science student in NUS who is in charge of our website and graphic design as well as Darima, a year 3 arts student in NUS who is our
-				lead in designing content for our social media sites.</p>
-
+				business marketing student in NUS who is also our head of public relations and marketing, Samihah, a year 3 political science student in NUS who is a writer of our website blogs,
+        Tze Min, a year 3 business analytics student who is another writer for our website blogs
+				Wei Ming, a year 2 computer science student in NUS who is in charge of our website and graphic design as well as Darima, a year 3 arts student in NUS who
+        is a designer for our social media sites.</p>
 				<h5 class="font-weight-light">Connect with us and checkout more of our work here:</h5>
 				<div style="height:10px"></div>
 
