--- a/illuminatesg.html
+++ b/illuminatesg.html
@@ -127,7 +127,7 @@
 				<p class="lead">I am part of the <span class="u--highlight" id="smaller-highlight">Marketing team where I am the head of content creation
         </span>. I overlook specifically at the content we create
 				for our social media sites,
-				our website where we share blogs and our marketing material for our events like posters and banners. I also do designs for our Instagram posts and posters for events.
+				our website where we share blogs and our marketing material for our events like posters and banners. I also do designs for our Instagram posts.
         I am incredibley delighted to be working with
 				amazing group mates, especially the marketing team that is filled with talented individuals. Although we have our positions, we work on a flat
 				hierarchy so that everyone is able to comfortably voice out opinions and be part of decision making. My marketing team mates include Raihana, a year 4
