--- a/illuminatesg.html
+++ b/illuminatesg.html
@@ -132,7 +132,7 @@
 				amazing group mates, especially the marketing team that is filled with talented individuals. Although we have our positions, we work on a flat
 				hierarchy so that everyone is able to comfortably voice out opinions and be part of decision making. My marketing team mates include Raihana, a year 4
 				business marketing student in NUS who is also our head of public relations and marketing, Samihah, a year 3 political science student in NUS who is a writer for our website blogs,
-        Tze Min, a year 3 business analytics student who is another writer for our website blogs
+        Tze Min, a year 3 business analytics student who is another writer for our website blogs,
 				Wei Ming, a year 2 computer science student in NUS who is in charge of our website and graphic design as well as Darima, a year 3 arts student in NUS who
         is a designer for our social media sites.</p>
 				<h5 class="font-weight-light">Connect with us and checkout more of our work here:</h5>
