Edited bg style for mobile.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <body>
     <div class="container" id="main-container">
       <div class="card border-0 shadow my-5">
-        <div class="card-body p-5">
+        <div class="card-body body__overall p-5">
           <!-- Introduction -->
           <div data-aos="fade-up">
 
