Edited bg style for mobile.

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </section>
           </div>
           <section class="info-cards" id="intro-cards">
-            <div data-aos="fade-up">
+            <div data-aos="fade-down">
               <h3 class="font-weight-light" style="margin-top:50px"><span class="u--highlight">Learn more about me.</span></h3>
               <div class="row">
                 <div class="col-sm">
